samples/_failures_safe/1761620325_7084d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2fc024c.c: In function ‘main’:
./samples/SAFE/__tmp_f2fc024c.c:139:44: error: expected ‘)’ at end of input
  139 |         if (src < 0 || src >= nodes || dest
      |            ~                               ^
      |                                            )
./samples/SAFE/__tmp_f2fc024c.c:139:9: error: expected declaration or statement at end of input
  139 |         if (src < 0 || src >= nodes || dest
      |         ^~
./samples/SAFE/__tmp_f2fc024c.c:139:9: error: expected declaration or statement at end of input
